finished pre-processing

--- a/scripts/pre_processing_ITS.Rmd
+++ b/scripts/pre_processing_ITS.Rmd
@@ -14,7 +14,16 @@ library(phyloseq)
 #path to raw-data directory (change "path" to your raw-data directory)
 
 ```{r}
-path <- "G:/マイドライブ/ishizaki/231202_Sugi_phyllosphere_June"
+#create "path" file, and define "path" as your raw-data directory(character vector) in the file
+#"path" is raw-data directory, and "path_out" is output file directory
+
+source("../scripts/path.R")
+```
+
+#source codes
+
+```{r}
+source("../R/add_NA.R")
 ```
 
 #import raw-data
@@ -24,10 +33,8 @@ otus <- read_qza(paste0(path,
                         "/Analysis/NoContam/table-no-contam_ITS.qza"))
 taxonomy <- read_qza(paste0(path, 
                             "/Analysis/taxa/classification_ITS_single_all.qza"))
-tree <- read_qza(paste0(path, 
-                        "/Analysis/phylogeny/seqs_nocontam_ITS_aligned_masked_tree_rooted.qza"))
-tree_rarefied <- read_qza(paste0(path, 
-                                 "/Analysis/phylogeny/seqs_rarefied_ITS_aligned_masked_tree_rooted.qza"))
+tree <- read_qza(paste0(path, "/Analysis/phylogeny/seqs_nocontam_ITS_aligned_masked_tree_rooted.qza"))
+tree_rarefied <- read_qza(paste0(path, "/Analysis/phylogeny/seqs_rarefied_ITS_aligned_masked_tree_rooted.qza"))
 ```
 
 #otu_table
@@ -53,11 +60,13 @@ colnames(tax_table) <- c("Kingdom",
                         "SpeciesHypothesis")
 rownames(tax_table) <- taxonomy$data$Feature.ID
 
-# ASV_nameとfearture idの対応付け
+#Assign ASV numbers to each ASV
 ASV_name <- paste0(rep("ASV", nrow(tax_table)), 
                    seq(1, nrow(tax_table)))
 tax_table <- cbind(tax_table, ASV_name)
 ```
+
+#tax_table2, rownames of which are ASV numbers
 
 ```{r tax-table2, cache=TRUE, dependson="tax-table"}
 tax_table2 <- tax_table
@@ -70,7 +79,7 @@ tax_table2 <- tax_table2[, 1:8]
 ```
 
 
-# feature numberからASVnameへ
+#otus_data2, colnames of which are ASV numbers
 
 ```{r otus-data2, cache=TRUE, dependson="tax-table"}
 feature_row <- sapply(as.list(colnames(otus_data)), 
@@ -81,14 +90,14 @@ otus_data2 <- otus_data
 colnames(otus_data2) <- tax_table[feature_row, 9]
 ```
 
-##tree_feature_name_to_ASV
+##tree_change_hash_to_ASV
 
 ```{r tree, cache=TRUE, dependson="import", dependson="tax-table"}
-tree_ITS2 <- tree_ITS
-feature_tree <- sapply(tree_ITS2$data$tip.label, 
+tree2 <- tree
+feature_tree <- sapply(tree2$data$tip.label, 
                        grep, 
                        rownames(tax_table))
-tree_ITS2$data$tip.label <- tax_table[feature_tree, 9]
+tree2$data$tip.label <- tax_table[feature_tree, 9]
 ```
 
 ```{r, cache=TRUE, dependson="import", dependson="tax-table"}
@@ -96,5 +105,23 @@ tree_rarefied2 <- tree_rarefied
 #tip_labels of the phylogenetic tree are also hashes
 
 #replace hashes to ASV names
-tree_rarefied2$data$tip.label <- tax_table[sapply(tree_rarefied2$data$tip.label, grep, rownames(tax_table)), 9]
+tree_rarefied2$data$tip.label <- tax_table[
+  sapply(tree_rarefied2$data$tip.label, 
+         grep, 
+         rownames(tax_table)
+         ), 9]
+```
+
+#output
+
+```{r output, cache=TRUE, dependson=tax-table2}
+write.csv(tax_table, 
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/tax_table_ITS.csv"))
+write.csv(tax_table2, 
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/tax_table2_ITS.csv"))
+write.csv(otus_data2, 
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/otus_data_ITS.csv"), 
+          row.names = as.character(rownames(otus_data2)))
+save(list = c("tree2", "tree_rarefied2"), 
+     file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/trees.Rdata"))
 ```
