--- a/scripts/template.Rmd
+++ b/scripts/template.Rmd
@@ -7,7 +7,10 @@ date: "2024-10-10"
 #load packages
 
 ```{r}
+library(readxl)
+library(phyloseq)
 library(tidyverse)
+library(vegan)
 ```
 
 #path to raw-data directory (change "path" to your raw-data directory)
