--- a/scripts/statistics_comparison.Rmd
+++ b/scripts/statistics_comparison.Rmd
@@ -30,18 +30,18 @@ source("../scripts/path.R")
 
 #read processed data
 
-```{r}
+```{r import}
 #change "16S" to "ITS" to rarefy ITS data
-df_rarefied <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/df_rarefied_16S.csv"), row.names = 1)
+df_rarefied <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/df_rarefied_ITS.csv"), row.names = 1)
 rownames(df_rarefied) <- formatC(as.numeric(rownames(df_rarefied)), width = 4, flag = "0") 
 #add 0 to the head of rownames
 
-tax_table <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/tax_table2_16S.csv"), row.names = 1)
+tax_table <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/tax_table2_ITS.csv"), row.names = 1)
 tax_table <- as.matrix(tax_table)
 
-load(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/trees.Rdata"))
+load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/trees.Rdata"))
 
-metadata <- read_excel(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/metadata_2306.xlsx"), 
+metadata <- read_excel(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/metadata_2306.xlsx"), 
                        sheet = "Sheet1")
 metadata <- column_to_rownames(metadata, var = "Sample_Name")
 metadata$cloneID <- as.factor(metadata$cloneID)
@@ -49,6 +49,24 @@ metadata$population <- as.factor(metadata$population)
 metadata$site <- as.factor(metadata$site)
 metadata$date <- as.factor(metadata$date)
 ```
+
+{r, eval=FALSE}
+#data from which outliers were excluded
+df_rarefied <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/exclude/df_rarefied_ITS_out.csv"), row.names = 1)
+rownames(df_rarefied) <- formatC(as.numeric(rownames(df_rarefied)), width = 4, flag = "0") 
+#add 0 to the head of rownames
+
+tax_table <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/tax_table2_ITS.csv"), row.names = 1)
+tax_table <- as.matrix(tax_table)
+
+load(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/trees.Rdata"))
+
+metadata <- read.csv(paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/processed_data/exclude/metadata_ITS_out.csv"), row.names = 1)
+rownames(metadata) <- formatC(as.numeric(rownames(metadata)), width = 4, flag = "0")
+metadata$cloneID <- as.factor(metadata$cloneID)
+metadata$population <- as.factor(metadata$population)
+metadata$site <- as.factor(metadata$site)
+metadata$date <- as.factor(metadata$date)
 
 #phyloseq_object
 
@@ -87,7 +105,7 @@ model_bray <- adonis2(dist_bray ~ site * population,
                       by = "terms")
 model_bray
 
-#write.csv(model_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/PERMANOVA_bray.csv"))
+#write.csv(model_bray, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/PERMANOVA_bray.csv"))
 ```
 
 ```{r}
@@ -115,7 +133,7 @@ model_UF <- adonis2(dist_UF ~ site * population,
 
 model_UF
 
-#write.csv(model_UF, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/PERMANOVA_weightedUF.csv"))
+#write.csv(model_UF, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/PERMANOVA_weightedUF.csv"))
 ```
 
 #PERMDISP
@@ -136,7 +154,7 @@ disptest_bray <- permutest(disp_bray, permutations = 999)
 show(disptest_bray)
 plot(disp_bray)
 
-#write.csv(disptest_bray$tab, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/PERMDISP_bray.csv"))
+#write.csv(disptest_bray$tab, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/PERMDISP_bray.csv"))
 ```
 
 ##UniFrac
@@ -152,6 +170,6 @@ disptest_UniFrac <- permutest(disp_UniFrac, permutations = 999)
 show(disptest_UniFrac)
 plot(disp_UniFrac)
 
-#write.csv(disptest_UniFrac$tab, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/PERMDISP_weightedUF.csv"))
+#write.csv(disptest_UniFrac$tab, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/analysis/PERMDISP_weightedUF.csv"))
 ```
 
